Fixed sizing overflow error

--- a/css/main.css
+++ b/css/main.css
@@ -424,14 +424,21 @@ position: relative;
 .portfolio__item {
   background: var(--clr-accent);
   overflow: hidden;
-
+  position: relative;
+  padding: 0 0 100%;
 }
 
 .portfolio__img{
   transition:
     transform 750ms cubic-bezier(.5, 0, .5, 1),
     opacity 250ms linear;
-  ;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+
 }
 
 .portfolio__item:focus {
